# SLS

./: README.md  _config.yml
AliceSkills/Functions/: Color_xy(cie)_to_RGB_Converter.js  int2rgb_rgb2int.js
AliceSkills/Kuzia/: alice(Kuzia).md
AliceSkills/funtik-test/: actionQueryFromYA.json  discoveryResponseToYA.json  (+2 more)
InfluxDB/: Readme.md  ws.js
LUA/: devices.json  devs.json  fu.lua  func.lib  func.lua  funtik.lua  funtikDevs.json  json2.lua  test.lua  testTime.lua
_layouts/: default.html
_sass/: jekyll-theme-cayman.scss  variables.scss
dzen_scripts/: README.md
sadrinovViktor/: ТЗ_sls.docx  ТЗ_sls.txt
sendCountersToUK/: Readme.md  index.py  meters--popup.js  notes.txt  requirements.txt  response.html  response.json  sendCountersToUK.md  sendMeters.lua
shell/: backupAllFiles.ps1
tasmota/testMedical/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
tasmota/testMedical/components/: ui_comp_hook.c
tasmota/testMedical/fonts/: ui_font_Big_Number.c  ui_font_Bold_Font.c
tasmota/testMedical/images/: ui_img_icn_battery_png.c  ui_img_icn_bluetooth_png.c  ui_img_icn_history_png.c  ui_img_img_btn_bg_png.c  ui_img_img_btn_off_png.c  ui_img_img_btn_on_png.c  ui_img_img_heart_big_png.c  ui_img_img_heart_small_png.c  ui_img_img_line_png.c  ui_img_img_slider_png.c  ui_img_img_switch_bg_png.c
tasmota/testMedical/screens/: ui_Medical_Screen.c
ui/: ui-test-clean.html  ui-test.html  ui.devices.json  ui.html  ui.rooms.json  ui_by_BalagurovAV.html  ui_by_BalagurovAV_notes.txt  ui_by_SergeySolomin.html  ui_by_nick7zmail_notes.txt
(+35 files in other folders)
